--- a/extension.cmp
+++ b/extension.cmp
@@ -1,22 +1,36 @@
-Cmp-Mod V01 Created by CVpcb (20090216-final) date = sam. 17 avril 2010 11:15:39 CEST
+Cmp-Mod V01 Created by CvPCB (2010-04-21 BZR 23xx)-stable date = dim. 24 oct. 2010 13:03:37 CEST
 
 BeginCmp
 TimeStamp = /4BC97136;
-Reference = P_1;
+Reference = P1;
 ValeurCmp = CONN_2;
 IdModule  = SIL-2;
 EndCmp
 
 BeginCmp
 TimeStamp = /4BC971E2;
-Reference = P_EQ_2;
+Reference = P2;
 ValeurCmp = CONN_2;
 IdModule  = SIL-2;
 EndCmp
 
 BeginCmp
+TimeStamp = /4CC40FE0;
+Reference = P_GROUND_1;
+ValeurCmp = CONN_1;
+IdModule  = SIL-1;
+EndCmp
+
+BeginCmp
+TimeStamp = /4CC410F0;
+Reference = R1;
+ValeurCmp = R;
+IdModule  = R4;
+EndCmp
+
+BeginCmp
 TimeStamp = /4BC97AA5;
-Reference = U?;
+Reference = U1;
 ValeurCmp = TL071;
 IdModule  = DIP-8__300;
 EndCmp
